[project]
name = "hexlet-code"
version = "1.0"
description = "Brain Games"
readme = "README.md"
authors = [
    { name = "Darya Mazanova", email = "dashamazanova@yandex.ru" },
]
requires-python = ">=3.12"
dependencies = [
    "prompt",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


